...
        floatingActionButton: Obx(
          () => controller.isLoading.value
              ? const DSLoading(
                  size: DSLoadingSizeEnum.medium,
                )
              : DSCircularButton(
                  key: const Key('info_button_details'),
                  onTap: () =>
                      BottomSheetWidget.show(child: _getBottomSheetDetails()),
                  button: DSCircularButtonNavigatorEnum.info,
                ),
        ),
        appBar: AppBar(
...
    return SafeArea(
      child: Column(
        children: [
          Padding(
            padding: EdgeInsets.only(bottom: DSHeight.h_8.value),
            child: Text(
              'Detalhes',
              style: DSTextStyle.subtitle.copyWith(
                color: DSColors.text,
                fontWeight: FontWeight.bold,
              ),
            ),
          ),
...
        Container(
          alignment: Alignment.center,
          color: DSColors.secondary,
          width: DSHelper.width,
          height: DSHeight.h_48.value,
          child: Text(
            'Personagens relacionados',
            textAlign: TextAlign.center,
            style: DSTextStyle.body.copyWith(
              color: DSColors.white,
              fontWeight: FontWeight.bold,
            ),
          ),
...
                          scrollDirection: Axis.horizontal,
                          itemBuilder: (BuildContext context, int index) {
                            final hero = controller.relatedHeroes[index];
                            final name = hero.name ?? '';
                            final image = hero.imageUrl ?? '';
                            return GestureDetector(
                              key: const Key('related_hero_card'),
                              onTap: () => controller.loadRelatedHero(hero),
                              child: Container(
                                width: DSHelper.width * 0.35,
                                margin: EdgeInsets.symmetric(
                                  vertical: DSHeight.h_12.value,
                                  horizontal: DSHeight.h_16.value,
...
